tests/parser/bad/lib/lmodule-library-cid-let-id-with.scillib
library TestLib

(* equals should be '=' *)
let a equals True
